microservices/classification/classification-ingress-minion.yml
# must be applied to the "classification" namespace
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: classification-ingress-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: api.rendize.com
    http:
      paths:
      - path: /classification/*
        backend:
          serviceName: classification-service
          servicePort: 80
